--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Agenda Pro | V4.8</title>
+    <title>Agenda Pro | V4.9</title>
 
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
@@ -32,7 +32,7 @@
         .auth-container { width: 100%; max-width: 360px; text-align: center; }
         .logo { font-size: 52px; font-weight: 900; letter-spacing: -3.5px; margin: 0 0 30px 0; }
 
-        /* Centered Buttons with Logos */
+        /* Grid-Centered Buttons */
         .btn-stack { width: 100%; display: flex; flex-direction: column; gap: 10px; margin-bottom: 25px; }
         .btn-auth { 
             width: 100%; padding: 15px 20px; border-radius: 14px; border: none; 
@@ -41,15 +41,16 @@
             transition: 0.2s;
         }
         
+        /* Themed Button Colors */
         .btn-google { background: #ffffff; color: #000; }
-        .btn-github { background: #24292e; color: #fff; }
-        .btn-discord { background: #5865F2; color: #fff; }
+        .btn-github { background: #1a1a1a; color: #fff; border: 1px solid var(--border); }
+        .btn-discord { background: #1a1a1a; color: #fff; border: 1px solid var(--border); } /* Dark Discord */
         .btn-phone { background: #1a1a1a; color: #fff; border: 1px solid var(--border); }
         
         .icon-box { display: flex; align-items: center; justify-content: center; }
-        .icon-box svg, .icon-box img { width: 20px; height: 20px; }
+        .icon-box svg { width: 20px; height: 20px; }
 
-        .btn-auth:active { transform: scale(0.97); }
+        .btn-auth:active { transform: scale(0.97); opacity: 0.8; }
 
         /* Email Form */
         .email-form { 
@@ -63,7 +64,7 @@
         }
         .btn-login { width: 100%; background: var(--accent); color: #000; border: none; padding: 16px; border-radius: 12px; font-weight: 900; cursor: pointer; text-transform: uppercase; }
 
-        /* App Layout */
+        /* App Main Shell */
         #app-shell { display: none; flex-direction: column; height: 100vh; }
         header { padding: calc(var(--safe-top) + 20px) 25px 15px; border-bottom: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center; }
         main { flex: 1; overflow-y: auto; padding: 20px; padding-bottom: 280px; }
@@ -98,7 +99,8 @@
                         <svg viewBox="0 0 24 24"><path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"/><path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/><path fill="#FBBC05" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81.38z"/><path fill="#EA4335" d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/></svg>
                     </div>
                     <span>Continue with Google</span>
-                    <div></div> </button>
+                    <div></div>
+                </button>
 
                 <button class="btn-auth btn-github" onclick="socialAuth('github')">
                     <div class="icon-box"><i data-lucide="github"></i></div>
@@ -108,7 +110,7 @@
 
                 <button class="btn-auth btn-discord" onclick="socialAuth('discord')">
                     <div class="icon-box">
-                        <svg viewBox="0 0 24 24" fill="white"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.23 10.23 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.196.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.06.06 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.956-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.946 2.418-2.157 2.418z"/></svg>
+                        <svg viewBox="0 0 24 24" fill="currentColor"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.23 10.23 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.196.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.06.06 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.956-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.946 2.418-2.157 2.418z"/></svg>
                     </div>
                     <span>Continue with Discord</span>
                     <div></div>
