--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Agenda Pro | V4.8.2</title>
+    <title>Agenda Pro | V4.8.3</title>
 
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
@@ -14,7 +14,7 @@
     <style>
         :root {
             --bg: #000; --card: #121212; --border: #282828; --text: #ffffff;
-            --dim: #777; --accent: #ffd60a; --error: #ff453a;
+            --dim: #777; --accent: #ffffff; --error: #ff453a;
             --safe-top: env(safe-area-inset-top, 20px);
             --safe-bottom: env(safe-area-inset-bottom, 20px);
         }
