--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Agenda Pro | V3.1</title>
+    <title>Agenda Pro | V3.1.2</title>
 
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
@@ -39,18 +39,18 @@
         #app-shell { display: none; flex-direction: column; height: 100vh; transition: transform 0.6s cubic-bezier(0.16, 1, 0.3, 1), filter 0.6s; }
         #app-shell.modal-active { transform: scale(0.94); filter: blur(20px); pointer-events: none; }
 
-        header { padding-top: calc(var(--safe-top) + 20px); padding-bottom: 20px; background: var(--bg); border-bottom: 1px solid var(--border); z-index: 100; }
-        .header-top { display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px; padding: 0 25px; }
+        header { padding-top: calc(var(--safe-top) + 20px); padding-bottom: 10px; background: var(--bg); border-bottom: 1px solid var(--border); z-index: 100; flex-shrink: 0; }
+        .header-top { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; padding: 0 25px; }
         .header-top h1 { margin: 0; font-size: 34px; font-weight: 900; letter-spacing: -1.5px; }
 
         .icon-btn { cursor: pointer; display: flex; align-items: center; justify-content: center; width: 36px; height: 36px; color: var(--icon-color); }
         .icon-btn svg { width: 28px; height: 28px; fill: none; stroke: currentColor; stroke-width: 2.5; stroke-linecap: round; stroke-linejoin: round; }
 
-        .nav-scroller { display: flex; gap: 10px; overflow-x: auto; padding: 0 25px 5px; scrollbar-width: none; }
+        .nav-scroller { display: flex; gap: 12px; overflow-x: auto; padding: 5px 25px 15px; scrollbar-width: none; -webkit-overflow-scrolling: touch; }
         .nav-scroller::-webkit-scrollbar { display: none; }
 
-        .tab-pill { flex-shrink: 0; padding: 10px 22px; border-radius: 50px; background: var(--card); color: var(--dim); font-size: 13px; font-weight: 800; border: 1px solid var(--border); transition: 0.3s; cursor: pointer; }
-        .tab-pill.active { background: var(--accent); color: #000; border-color: var(--accent); transform: scale(1.05); }
+        .tab-pill { flex-shrink: 0; padding: 10px 22px; border-radius: 50px; background: var(--card); color: var(--dim); font-size: 13px; font-weight: 800; border: 1px solid var(--border); transition: 0.2s ease; cursor: pointer; }
+        .tab-pill.active { background: var(--accent); color: #000; border-color: var(--accent); transform: scale(1.02); }
 
         main { flex: 1; overflow-y: auto; padding: 25px; padding-bottom: 300px; }
         .month-label { font-size: 11px; text-transform: uppercase; letter-spacing: 2px; color: var(--accent); font-weight: 900; margin-bottom: 20px; display: flex; align-items: center; gap: 15px; }
@@ -66,11 +66,12 @@
         .modal-overlay.active { display: flex; opacity: 1; }
         .modal-sheet { background: var(--card); width: 100%; max-width: 500px; border-radius: 40px 40px 0 0; padding: 30px; padding-bottom: calc(var(--safe-bottom) + 10px); transform: translateY(100%); transition: 0.5s cubic-bezier(0.16, 1, 0.3, 1); border-top: 1px solid var(--border); max-height: 95vh; display: flex; flex-direction: column; }
         .modal-overlay.active .modal-sheet { transform: translateY(0); }
-        
         .modal-scroll-area { flex: 1; overflow-y: auto; padding-right: 5px; }
 
         .settings-item { background: var(--bg); padding: 16px 20px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--border); }
         .drag-handle { cursor: grab; padding: 8px; color: var(--dim); font-size: 18px; }
+
+        .trash-icon { width: 20px; height: 20px; fill: none; stroke: var(--error); stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; cursor: pointer; }
 
         .profile-box { display: flex; align-items: center; gap: 15px; padding: 15px; background: var(--bg); border-radius: 20px; margin-bottom: 25px; border: 1px solid var(--border); }
         .profile-box img { width: 45px; height: 45px; border-radius: 50%; border: 2px solid var(--accent); }
@@ -116,11 +117,11 @@
 
                 <p style="font-size:10px; font-weight:900; color:var(--dim); text-transform:uppercase; margin-bottom:12px;">App Themes</p>
                 <div style="display:grid; grid-template-columns: repeat(3, 1fr); gap:8px; margin-bottom:30px;">
-                    <button class="tab-pill" onclick="setTheme('theme-midnight')">Midnight</button>
-                    <button class="tab-pill" onclick="setTheme('theme-solar')">Solar</button>
-                    <button class="tab-pill" onclick="setTheme('theme-cyber')">Cyber</button>
-                    <button class="tab-pill" onclick="setTheme('theme-forest')">Forest</button>
-                    <button class="tab-pill" onclick="setTheme('theme-silver')">Silver</button>
+                    <button class="tab-pill" style="width:100%" onclick="setTheme('theme-midnight')">Midnight</button>
+                    <button class="tab-pill" style="width:100%" onclick="setTheme('theme-solar')">Solar</button>
+                    <button class="tab-pill" style="width:100%" onclick="setTheme('theme-cyber')">Cyber</button>
+                    <button class="tab-pill" style="width:100%" onclick="setTheme('theme-forest')">Forest</button>
+                    <button class="tab-pill" style="width:100%" onclick="setTheme('theme-silver')">Silver</button>
                 </div>
 
                 <p style="font-size:10px; font-weight:900; color:var(--dim); text-transform:uppercase; margin-bottom:12px;">Active Agendas</p>
@@ -129,8 +130,8 @@
                 <button class="btn-prime" onclick="auth.signOut()" style="background:var(--error); color:white; font-size:13px; letter-spacing:1px;">Log Out</button>
 
                 <div class="build-tag">
-                    VERSION 3.1.0-STABLE <br>
-                    BUILD_ID: 2026.02.15_PROD
+                    VERSION 3.1.2-STABLE <br>
+                    BUILD_ID: 2026.02.15_UI
                 </div>
             </div>
         </div>
@@ -197,6 +198,8 @@
         let agendas = JSON.parse(localStorage.getItem('agendas_v11')) || [{id:'General', type:'Standard'}, {id:'Finance', type:'Finance'}];
         let editId = null;
         let sortableInstance = null;
+
+        const trashSvg = `<svg class="trash-icon" viewBox="0 0 24 24"><path d="M3 6h18M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2M10 11v6M14 11v6"/></svg>`;
 
         function handleLogin() { auth.signInWithPopup(new firebase.auth.GoogleAuthProvider()); }
 
@@ -302,9 +305,9 @@
                             <span style="font-size:10px; color:var(--dim);">${a.type}</span>
                         </div>
                     </div>
-                    <div style="display:flex; gap:12px;">
+                    <div style="display:flex; align-items:center; gap:16px;">
                         <span style="color:var(--accent); font-size:11px; font-weight:900; cursor:pointer;" onclick="renameAgenda('${a.id}')">RENAME</span>
-                        <span style="color:var(--error); font-size:11px; font-weight:900; cursor:pointer;" onclick="if(confirm('Delete?')){agendas=agendas.filter(x=>x.id!=='${a.id}');saveAgendas();render();renderSettingsList();}">X</span>
+                        <div onclick="if(confirm('Delete?')){agendas=agendas.filter(x=>x.id!=='${a.id}');saveAgendas();render();renderSettingsList();}">${trashSvg}</div>
                     </div>
                 </div>
             `).join('');
@@ -380,9 +383,9 @@
                     card.innerHTML = `
                         ${pBar}
                         <div class="card-body"><b>${displayTitle}</b><span>${task.date}</span></div>
-                        <div style="display:flex; align-items:center; gap:12px;">
+                        <div style="display:flex; align-items:center; gap:16px;">
                             ${badge}
-                            <span style="color:var(--error); font-weight:900; padding:10px;" onclick="event.stopPropagation(); if(confirm('Delete?')) db.collection('tasks').doc('${task.id}').delete();">✕</span>
+                            <div style="padding:10px;" onclick="event.stopPropagation(); if(confirm('Delete?')) db.collection('tasks').doc('${task.id}').delete();">${trashSvg}</div>
                         </div>
                     `;
                     sec.appendChild(card);
